tests/extensions/structs/syntaxErr/structWithFunctions.wacc
begin
    struct sa is
        int a   # 4
        char b  # 1
        bool c  # 1
    
        bool foo() is
            return true
        end
    end

end


